# SDMetrics

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  ContingenySimilarityExperiment.ipynb  HISTORY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  check.ipynb  codecov.yml  latest-requirements.txt  latest_requirements.txt  pyproject.toml  setup.cfg  setup.py  static_code_analysis.txt  tasks.py  test_contingency_similarity.py  test_properties.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: dependency_checker.yml  docs.yml  install.yml  integration.yml  lint.yml  minimum.yml  prepare_release.yml  readme.yml  release.yml  tests.yml  unit.yml
conda/: README.md  meta.yaml
docs/: Makefile  conf.py  index.md  index.rst  install.rst  make.bat  quickstart.rst  readme.rst
resources/: README.md  assets.sketch  equalized_odds_improvement_tutorial.ipynb
scripts/: release_notes_generator.py
sdmetrics/: __init__.py  _addons.py  _utils_metadata.py  base.py  demo.pkl  demos.py  errors.py  evaluation.py  goal.py  report.py  utils.py  visualization.py  warnings.py
sdmetrics/column_pairs/: __init__.py  base.py
sdmetrics/column_pairs/statistical/: __init__.py  cardinality_boundary_adherence.py  contingency_similarity.py  correlation_similarity.py  inter_row_msas.py  kl_divergence.py  referential_integrity.py  statistic_msas.py
sdmetrics/constraint/: __init__.py
sdmetrics/datasets/: __init__.py
sdmetrics/datasets/sdstash-st1/: make.py  metadata.json  table1.csv
sdmetrics/datasets/sdstash-st2/: make.py  metadata.json  table1.csv
sdmetrics/demos/: multi_table.pkl  single_table.pkl  timeseries.pkl
sdmetrics/demos/multi_table/: metadata.json  sessions_real.csv  sessions_synthetic.csv  transactions_real.csv  transactions_synthetic.csv  users_real.csv  users_synthetic.csv
sdmetrics/demos/single_table/: metadata.json  real.csv  synthetic.csv
sdmetrics/demos/timeseries/: metadata.json  timeseries_real.csv  timeseries_synthetic.csv
sdmetrics/detection/: __init__.py  tabular.py
sdmetrics/detection/tabular/: __init__.py  base.py  logistic.py  sklearn.py  svc.py
sdmetrics/efficacy/: __init__.py  base.py
sdmetrics/multi_table/: README.md  __init__.py  base.py  multi_single_table.py  single_table.py
sdmetrics/multi_table/detection/: __init__.py  base.py  parent_child.py
sdmetrics/multi_table/statistical/: __init__.py  cardinality_shape_similarity.py  cardinality_statistic_similarity.py
sdmetrics/multivariate/: __init__.py
sdmetrics/multivariate/detection/: __init__.py
sdmetrics/multivariate/efficacy/: __init__.py
sdmetrics/multivariate/statistical/: __init__.py  utils.py
sdmetrics/reports/: __init__.py  _results_handler.py  base_report.py  base_unified_report.py  diagnostic_report.py  quality_report.py  utils.py
sdmetrics/reports/multi_table/: __init__.py  base_multi_table_report.py  diagnostic_report.py  plot_utils.py  quality_report.py
sdmetrics/reports/single_table/: __init__.py  base_report.py  diagnostic_report.py  plot_utils.py  quality_report.py
sdmetrics/single_column/: README.md  __init__.py  base.py
sdmetrics/single_column/statistical/: __init__.py  boundary_adherence.py  category_adherence.py  category_coverage.py  cstest.py  key_uniqueness.py  kscomplement.py  kstest.py  missing_value_similarity.py  range_coverage.py  sequence_length_similarity.py  statistic_similarity.py  tv_complement.py
sdmetrics/single_table/: README.md  __init__.py  base.py  bayesian_network.py  equalized_odds.py  gaussian_mixture.py  multi_column_pairs.py  multi_single_column.py  new_row_synthesis.py  single_column.py  synthetic_uniqueness.py  table_format.py  table_structure.py  utils.py
sdmetrics/single_table/data_augmentation/: __init__.py  base.py  binary_classifier_precision_efficacy.py  binary_classifier_recall_efficacy.py  utils.py
sdmetrics/single_table/detection/: __init__.py  base.py  sklearn.py
sdmetrics/single_table/efficacy/: __init__.py  base.py  binary.py  binary_classification.py  mlefficacy.py  multiclass.py  multiclass_classification.py  regression.py
sdmetrics/single_table/privacy/: CAP.py  CategoricalSklearn.py  ENS.py  Loss.py  LossFunction.py  NearestNeighbors.py  NumericalSklearn.py  __init__.py  base.py  cap.py  cat_skl.py  categorical_skl.py  categorical_sklearn.py  dcr_baseline_protection.py  dcr_overfitting_protection.py  dcr_utils.py  disclosure_protection.py  ens.py  ensemble.py  loss.py  nn.py  num_skl.py  numerical_skl.py  numerical_sklearn.py  radius_nearest_neighbor.py  util.py
sdmetrics/statistical/: __init__.py  utils.py
sdmetrics/statistical/bivariate/: __init__.py  base.py  continuous.py  discrete.py
sdmetrics/statistical/univariate/: __init__.py  base.py  cstest.py  kstest.py
sdmetrics/timeseries/: README.md  __init__.py  base.py  detection.py  inter_row.py  inter_row_msas.py  ml_scorers.py  sequence.py  sequence_length_similarity.py  statistic_msas.py
sdmetrics/timeseries/efficacy/: __init__.py  base.py  classification.py
tests/: __init__.py  test_property.py  test_report.py  test_sdmetrics.py  utils.py
tests/end-to-end/: test_sdmetrics.py
tests/integration/: __init__.py  test_base.py  test_property.py
tests/integration/column_pairs/: __init__.py
tests/integration/multi_table/: __init__.py  test_multi_single_table.py  test_multi_table.py  test_parent_child.py  test_single_table.py  test_statistical_metrics.py
tests/integration/reports/: __init__.py  conftest.py  test_unified_reports.py
tests/integration/single_column/: __init__.py
tests/integration/single_table/: __init__.py  test_equalized_odds.py  test_gaussian_mixture.py  test_single_table.py
tests/integration/timeseries/: __init__.py  (+1 more)
tests/readme_test/: README.md
tests/unit/: __init__.py  test___init__.py  test__addons.py  test__utils_metadata.py  test_base.py  test_demos.py  test_report.py  test_utils.py  test_visualization.py
tutorials/: 1_getting_started.ipynb  2_writing_metrics.ipynb  3_ml_efficacy.ipynb
(+192 files in other folders)
